--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="features-details">
                 <h3 class="features-title"><span class="quick">Quick list </span><b>of Our</b> <span class="orange">Features</span></h3>
-                <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
                 <button class="small-button">Explore More</button>
             </div>
         </section>
@@ -111,5 +111,6 @@
  
 </div></section>
 <footer><p>All rights reserved copyright@2023 startup landing page design</p></footer>
+ 
 </body>>
 </html>
